--- a/equipo.html
+++ b/equipo.html
@@ -16,7 +16,7 @@
   <header>
      <nav class="navbar">
       <a href="index.html" class="logo-text">
-         <img src="img/logo solme.svg" alt="Solme FC Logo">
+         <img src="img/logo solme@2x.png" alt="Solme FC Logo">
         <span>SOLME FC</span>
       </a>
 
@@ -183,3 +183,4 @@
 </script>
 </body>
 </html>
+
