--- a/contacto.html
+++ b/contacto.html
@@ -14,7 +14,7 @@
   <header>
     <nav class="navbar">
       <a href="index.html" class="logo-text">
-         <img src="img/logo solme.svg" alt="Solme FC Logo">
+         <img src="img/logo solme@2x.png" alt="Solme FC Logo">
         <span>SOLME FC</span>
       </a>
 
@@ -76,3 +76,4 @@
 </script>
 </body>
 </html>
+
